// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewProject > assets 1`] = `
[
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "gitignore",
  "LICENSE",
  "lint-staged.config.js",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo cli case 1`] = `
[
  ".gitignore",
  "bin/index.js",
  "dev/index.ts",
  "package.mock.json",
  "src/cli.ts",
  "src/index.ts",
  "tsconfig.json",
  "tsdown.config.ts",
]
`;

exports[`createNewProject > createNewProject demo client case 1`] = `
[
  ".gitignore",
  "AGENTS.md",
  "eslint.config.js",
  "index.html",
  "package.mock.json",
  "public/vite.svg",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/query-keys.ts",
  "src/router/index.ts",
  "src/stores/i18n.ts",
  "src/stores/index.ts",
  "src/style.css",
  "src/trpc/index.ts",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.worker.json",
  "vite.config.ts",
  "worker-configuration.d.ts",
  "worker/app.ts",
  "worker/config.ts",
  "worker/fetch-entry.ts",
  "worker/node-entry.ts",
  "worker/trpc-router.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo default case 1`] = `
[
  "package.mock.json",
  "src/index.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsdown.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo server case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/app.ts",
  "src/config.ts",
  "src/fetch-entry.ts",
  "src/node-entry.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsconfig.worker.json",
  "tsdown.config.ts",
  "vitest.config.ts",
  "worker-configuration.d.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo vue-ui case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/HelloWorld.vue",
  "src/index.ts",
  "src/vite-env.d.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.test.json",
  "vite.config.ts",
  "vite.shared.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo website case 1`] = `
[
  ".gitignore",
  ".vitepress/config.ts",
  ".vitepress/env.d.ts",
  ".vitepress/home/content.ts",
  ".vitepress/home/types.ts",
  ".vitepress/navigation/routes.ts",
  ".vitepress/seo.ts",
  ".vitepress/theme/components/HomePage.vue",
  ".vitepress/theme/home/foundation.css",
  ".vitepress/theme/home/index.css",
  ".vitepress/theme/home/responsive.css",
  ".vitepress/theme/home/sections.css",
  ".vitepress/theme/index.ts",
  ".vitepress/theme/Layout.vue",
  ".vitepress/theme/tailwind.css",
  "ai/index.md",
  "ai/llms-txt.md",
  "index.md",
  "learn/index.md",
  "learn/monorepo/commands.md",
  "learn/monorepo/index.md",
  "learn/monorepo/manage.md",
  "learn/monorepo/publish.md",
  "learn/monorepo/templates.md",
  "learn/monorepo/troubleshooting.md",
  "learn/packages/assets/npm-dt.svg",
  "learn/packages/assets/npm-ts.svg",
  "learn/packages/examples/0.npm-basic-package/index.js",
  "learn/packages/examples/0.npm-basic-package/package.json",
  "learn/packages/examples/1.npm-basic-package/index.cjs",
  "learn/packages/examples/1.npm-basic-package/index.d.ts",
  "learn/packages/examples/1.npm-basic-package/index.js",
  "learn/packages/examples/1.npm-basic-package/package.json",
  "learn/packages/examples/2.npm-basic-package/package-lock.json",
  "learn/packages/examples/2.npm-basic-package/package.json",
  "learn/packages/examples/2.npm-basic-package/README.md",
  "learn/packages/examples/2.npm-basic-package/rename-ext.js",
  "learn/packages/examples/2.npm-basic-package/src/index.ts",
  "learn/packages/examples/2.npm-basic-package/tsconfig.cjs.json",
  "learn/packages/examples/2.npm-basic-package/tsconfig.esm.json",
  "learn/packages/examples/2.npm-basic-package/tsconfig.json",
  "learn/packages/examples/3.npm-basic-package/package-lock.json",
  "learn/packages/examples/3.npm-basic-package/package.json",
  "learn/packages/examples/3.npm-basic-package/README.md",
  "learn/packages/examples/3.npm-basic-package/src/index.ts",
  "learn/packages/examples/3.npm-basic-package/tsconfig.json",
  "learn/packages/examples/3.npm-basic-package/tsdown.config.ts",
  "learn/packages/examples/usage-cjs/cjs.cjs",
  "learn/packages/examples/usage-cjs/esm.mjs",
  "learn/packages/examples/usage-cjs/index.js",
  "learn/packages/examples/usage-cjs/package-lock.json",
  "learn/packages/examples/usage-cjs/package.json",
  "learn/packages/examples/usage-esm/cjs.cjs",
  "learn/packages/examples/usage-esm/createRequire.js",
  "learn/packages/examples/usage-esm/esm.mjs",
  "learn/packages/examples/usage-esm/index.js",
  "learn/packages/examples/usage-esm/package-lock.json",
  "learn/packages/examples/usage-esm/package.json",
  "learn/packages/index.md",
  "learn/packages/modern-overview.md",
  "learn/packages/modern/bundlers.md",
  "learn/packages/modern/dts.md",
  "learn/packages/modern/esm-vs-cjs.md",
  "learn/packages/modern/index.md",
  "learn/packages/modern/package-entry-points.md",
  "learn/packages/modern/typescript.md",
  "learn/packages/module-extensions.md",
  "learn/packages/publish.md",
  "learn/packages/reuse-javascript.md",
  "learn/packages/runtime-globals.md",
  "learn/repoctl-model.md",
  "learn/tools/changeset.md",
  "learn/tools/husky.md",
  "learn/tools/index.md",
  "learn/tools/lint-staged.md",
  "learn/tools/llms-txt.md",
  "learn/tools/pnpm.md",
  "learn/tools/renovate.md",
  "learn/tools/turborepo.md",
  "package.mock.json",
  "public/_redirects",
  "public/brand/apple-touch-icon.png",
  "public/brand/favicon.ico",
  "public/brand/repoctl-lockup-dark.svg",
  "public/brand/repoctl-lockup.svg",
  "public/brand/repoctl-mark-192.png",
  "public/brand/repoctl-mark-dark.svg",
  "public/brand/repoctl-mark.svg",
  "public/brand/repoctl-social-en.png",
  "public/brand/repoctl-social-en.webp",
  "public/brand/repoctl-social-zh.png",
  "public/brand/repoctl-social-zh.webp",
  "public/favicon.ico",
  "public/logo.jpg",
  "public/repoctl-doctor.png",
  "reference/aliases.md",
  "reference/commands.md",
  "reference/config.md",
  "reference/execution-model.md",
  "reference/index.md",
  "reference/output.md",
  "reference/template-assets.md",
  "reference/templates.md",
  "scripts/check-locales.ts",
  "start/choose-next.md",
  "start/diagnose.md",
  "start/first-run.md",
  "start/index.md",
  "start/install.md",
  "tasks/adopt-existing.md",
  "tasks/checks.md",
  "tasks/ci.md",
  "tasks/create-project.md",
  "tasks/index.md",
  "tasks/release.md",
  "tasks/reports.md",
  "tasks/troubleshooting.md",
  "tsconfig.json",
  "wrangler.jsonc",
  "zh/ai/index.md",
  "zh/ai/llms-txt.md",
  "zh/index.md",
  "zh/learn/index.md",
  "zh/learn/monorepo/commands.md",
  "zh/learn/monorepo/index.md",
  "zh/learn/monorepo/manage.md",
  "zh/learn/monorepo/publish.md",
  "zh/learn/monorepo/templates.md",
  "zh/learn/monorepo/troubleshooting.md",
  "zh/learn/packages/assets/npm-dt.svg",
  "zh/learn/packages/assets/npm-ts.svg",
  "zh/learn/packages/examples/0.npm-basic-package/index.js",
  "zh/learn/packages/examples/0.npm-basic-package/package.json",
  "zh/learn/packages/examples/1.npm-basic-package/index.cjs",
  "zh/learn/packages/examples/1.npm-basic-package/index.d.ts",
  "zh/learn/packages/examples/1.npm-basic-package/index.js",
  "zh/learn/packages/examples/1.npm-basic-package/package.json",
  "zh/learn/packages/examples/2.npm-basic-package/package-lock.json",
  "zh/learn/packages/examples/2.npm-basic-package/package.json",
  "zh/learn/packages/examples/2.npm-basic-package/README.md",
  "zh/learn/packages/examples/2.npm-basic-package/rename-ext.js",
  "zh/learn/packages/examples/2.npm-basic-package/src/index.ts",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.cjs.json",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.esm.json",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.json",
  "zh/learn/packages/examples/3.npm-basic-package/package-lock.json",
  "zh/learn/packages/examples/3.npm-basic-package/package.json",
  "zh/learn/packages/examples/3.npm-basic-package/README.md",
  "zh/learn/packages/examples/3.npm-basic-package/src/index.ts",
  "zh/learn/packages/examples/3.npm-basic-package/tsconfig.json",
  "zh/learn/packages/examples/3.npm-basic-package/tsdown.config.ts",
  "zh/learn/packages/examples/usage-cjs/cjs.cjs",
  "zh/learn/packages/examples/usage-cjs/esm.mjs",
  "zh/learn/packages/examples/usage-cjs/index.js",
  "zh/learn/packages/examples/usage-cjs/package-lock.json",
  "zh/learn/packages/examples/usage-cjs/package.json",
  "zh/learn/packages/examples/usage-esm/cjs.cjs",
  "zh/learn/packages/examples/usage-esm/createRequire.js",
  "zh/learn/packages/examples/usage-esm/esm.mjs",
  "zh/learn/packages/examples/usage-esm/index.js",
  "zh/learn/packages/examples/usage-esm/package-lock.json",
  "zh/learn/packages/examples/usage-esm/package.json",
  "zh/learn/packages/index.md",
  "zh/learn/packages/modern-overview.md",
  "zh/learn/packages/modern/bundlers.md",
  "zh/learn/packages/modern/dts.md",
  "zh/learn/packages/modern/esm-vs-cjs.md",
  "zh/learn/packages/modern/index.md",
  "zh/learn/packages/modern/package-entry-points.md",
  "zh/learn/packages/modern/typescript.md",
  "zh/learn/packages/module-extensions.md",
  "zh/learn/packages/publish.md",
  "zh/learn/packages/reuse-javascript.md",
  "zh/learn/packages/runtime-globals.md",
  "zh/learn/repoctl-model.md",
  "zh/learn/tools/changeset.md",
  "zh/learn/tools/husky.md",
  "zh/learn/tools/index.md",
  "zh/learn/tools/lint-staged.md",
  "zh/learn/tools/llms-txt.md",
  "zh/learn/tools/pnpm.md",
  "zh/learn/tools/renovate.md",
  "zh/learn/tools/turborepo.md",
  "zh/reference/aliases.md",
  "zh/reference/commands.md",
  "zh/reference/config.md",
  "zh/reference/execution-model.md",
  "zh/reference/index.md",
  "zh/reference/output.md",
  "zh/reference/template-assets.md",
  "zh/reference/templates.md",
  "zh/start/choose-next.md",
  "zh/start/diagnose.md",
  "zh/start/first-run.md",
  "zh/start/index.md",
  "zh/start/install.md",
  "zh/tasks/adopt-existing.md",
  "zh/tasks/checks.md",
  "zh/tasks/ci.md",
  "zh/tasks/create-project.md",
  "zh/tasks/index.md",
  "zh/tasks/release.md",
  "zh/tasks/reports.md",
  "zh/tasks/troubleshooting.md",
]
`;

exports[`createNewProject > upgradeMonorepo 1`] = `
[
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release.yml",
  ".gitignore",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".npmrc",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "LICENSE",
  "lint-staged.config.js",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;
